--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   - ./shellcheck-on-linux-only.sh
   - asdf plugin-add $TOOL_NAME ./
   - asdf list-all $TOOL_NAME
-  - asdf plugin-test $TOOL_NAME ./ "$TOOL_TEST_COMMAND" --asdf-tool-version $TOOL_VERSION
+  - asdf plugin-test $TOOL_NAME "$TRAVIS_BUILD_DIR" --asdf-plugin-gitref "$TRAVIS_COMMIT" --asdf-tool-version $TOOL_VERSION "$TOOL_TEST_COMMAND"
 os:
   - linux
   - osx
